organized packet stuff and mixins, changed version comparison stuff