@@ -10,29 +10,35 @@ import java.lang.reflect.Modifier;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Objects;
 import java.util.function.BiConsumer;
 import java.util.function.Consumer;
 
 public class PacketWrapper<T> extends Packet {
 
     public final int id;
-    public final List<FieldEntry<?>> ENTRIES = new ArrayList<>();
+    private final List<FieldEntry<?>> ENTRIES = new ArrayList<>();
     public T holder;
     public Field[] fields;
-    protected BiConsumer<T, NetworkHandler> applyFunc = (t, handler) -> {
-    };
+    protected BiConsumer<T, NetworkHandler> applyFunc;
     protected Consumer<T> postWriteFunc = t -> {
     };
 
     public PacketWrapper(int id, FieldEntry<?>... entries) {
-        this.id = id;
-        this.ENTRIES.addAll(Arrays.asList(entries));
+        this(id, null, entries);
     }
 
     public PacketWrapper(int id, T t, FieldEntry<?>... entries) {
         this.id = id;
-        this.holder = t;
-        this.ENTRIES.addAll(Arrays.asList(entries));
+        if (t != null) wrap(t);
+        int i = 0;
+        for (FieldEntry<?> entry : entries = Arrays.stream(entries).filter(Objects::nonNull).toArray(FieldEntry[]::new)) {
+            if (!entry.unique && entry.fieldIndex == -1) {
+                entry.fieldIndex = i;
+                i++;
+            }
+        }
+        this.ENTRIES.addAll(List.of(entries));
     }
 
     public PacketWrapper<T> wrap(T t) {
@@ -41,20 +47,28 @@ public class PacketWrapper<T> extends Packet {
                 .filter(field -> Modifier.isPublic(field.getModifiers()) && !Modifier.isStatic(field.getModifiers())
                         && !Modifier.isFinal(field.getModifiers()))
                 .toArray(Field[]::new);
-        if (holder instanceof Packet) this.applyFunc = (packet, handler) -> ((Packet) packet).apply(handler);
+        if (holder instanceof Packet && applyFunc == null)
+            this.applyFunc = (packet, handler) -> ((Packet) packet).apply(handler);
+        return this;
+    }
+
+    public PacketWrapper<T> infer() {
+        if (this.ENTRIES.isEmpty()) {
+            for (Field field : fields) {
+                DataType<?> type = DataType.of(field);
+                if (type != null) ENTRIES.add(FieldEntry.of(type));
+            }
+        }
         return this;
     }
 
     @Override
     public void read(DataInputStream stream) {
-        int i = 0;
         for (FieldEntry<?> entry : ENTRIES) {
             try {
                 Object obj = entry.onRead(entry.type.read(stream));
                 if (!entry.unique) {
-                    int index = entry.fieldIndex > -1 ? entry.fieldIndex : i;
-                    fields[index].set(holder, obj);
-                    if (entry.fieldIndex == -1) i++;
+                    fields[entry.fieldIndex].set(holder, obj);
                 }
             } catch (Exception e) {
                 throw new RuntimeException(e);
@@ -64,14 +78,11 @@ public class PacketWrapper<T> extends Packet {
 
     @Override
     public void write(DataOutputStream stream) {
-        int i = 0;
         for (FieldEntry<?> entry : ENTRIES) {
             try {
-                int index = entry.fieldIndex > -1 ? entry.fieldIndex : i;
-                Object v = entry.value(holder) != null ? entry.value(holder) : fields[index].get(holder);
+                Object v = entry.value(holder) != null ? entry.value(holder) : fields[entry.fieldIndex].get(holder);
                 if (!entry.unique) {
-                    fields[index].set(holder, v);
-                    if (entry.fieldIndex == -1) i++;
+                    fields[entry.fieldIndex].set(holder, v);
                 }
                 entry.type.write(stream, entry.onWrite(v));
             } catch (Exception e) {
@@ -84,12 +95,9 @@ public class PacketWrapper<T> extends Packet {
     @Override
     public int size() {
         int size = 0;
-        int i = 0;
         for (FieldEntry<?> entry : ENTRIES) {
             try {
-                int index = entry.fieldIndex > -1 ? entry.fieldIndex : i;
-                size += entry.type.size(entry.value(holder) != null ? entry.value(holder) : fields[index].get(holder));
-                if (entry.fieldIndex == -1 && !entry.unique) i++;
+                size += entry.type.size(entry.value(holder) != null ? entry.value(holder) : fields[entry.fieldIndex].get(holder));
             } catch (IllegalAccessException ignored) {
             }
         }
